13 May 2011: Matthijs
	- Fix bug #365, do renaming of NSDC_ZONEC_VERBOSE and NSDC_PATCH_STYLE
	  environment variable names that were forgotten.
	- Fix bug #381 - Binary escaped and transfers.

13 April 2011: Wouter
	- Fix is_existing flag for ENT when domain that has a shared ENT
	  is deleted by IXFR.

5 April 2011: Wouter
	- Fix uninitialised value in xfrd nsd_soa, the rdata_count.

4 April 2011: Wouter
	- Fix printout of IPSECKEY by nsd-patch.

26 March 2011: Matthijs
	- @logfile@ was not substituted

25 March 2011: Wouter
	- Fix bug #365, you can set NSDC_ZONEC_VERBOSE and NSDC_PATCH_STYLE
	  in the environment where nsdc runs.
	- Fix bug #375, typos in nsd.conf.5.
	- First step of bug #369: RRSIG DNSKEY sets zone to be treated DNSSEC.
	- Fix bug #302, nsd accepts XFR but refuses to re-read the slave zone.

7 March 2011: Matthijs
	- Update 3.2 branch (3.2.3 -> 3.2.8rc1, 18 August 2009 - 3 March 2011)

7 March 2011: Wouter:
	- check chown value and report high verbosity its error.

3 March 2011: Matthijs:
	- fix #bug352: fix hardcoded paths in manpages.

2 March 2011: Matthijs:
	- fix #bug354: make realclean cleans too much
	- added make devclean for cleaning up autoconf and automake stuff
	- Fix hardcoded paths in nsd.conf.sample and nsd.conf.5

24 February 2011: Matthijs
	- fix #bug350: refused notifies should log client ip.

24 February 2011: Wouter
	- fix bug#362: outgoing-interface and v4 vs. v6 leads to spurious
	  warning messages.
	- fix bug#363: nsd-checkconf -v does not print outgoing-interface ok.
	- fix that nsd-checkconf -o outgoing-interface omits NOKEY.

23 February 2011: Wouter
	- (merged with nsd4 on 22nd).
	- fix for bug#357, make xfrd quit with many zones.
	
22 February 2011: Matthijs
	- Patch Jakob Schlyter (setusercontext before chroot).

18 February 2011: Wouter
	- overhaul of testset, with port uniqueness and fast start and stop.

17 February 2011: Wouter
	- Fix leak of compressiontable when the domain table increases in size.